--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,9 @@ body{
     font-size: 4rem;
     margin: 20px;
 }
+
+p{
+    font-size: 5rem;
+    color: rgb(206, 206, 206);
+    text-align: center;
+}
