--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,15 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-image: linear-gradient(to bottom, #5938ec, #ec1717);
 }
 
 .clock{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
@@ -19,15 +17,14 @@ body{
 
 .clock-face{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     width: 70dvw;
     height: 30dvw;
     padding: 10px;
+    border-radius: 30px;
     border: 1px solid #333;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.705);
-    border-radius: 30px;
-    position: relative;
     background-image: linear-gradient(to bottom, rgba(70, 68, 185, 0.651), rgba(69, 212, 69, 0.733), #b37937bd,#f14040da);
 }
 
@@ -35,18 +32,23 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 4rem;
     width: 33dvw;
     height: 33dvh;
     border-radius: 30px;
+    margin: 20px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.705);
     background-color: #333;
     color: white;
-    font-size: 4rem;
-    margin: 20px;
 }
 
 p{
-    font-size: 5rem;
-    color: rgb(206, 206, 206);
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 12px;
+    background-color: white;
 }
