--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,16 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
+    width: 100dvw;
 }
 
 .clock-face{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 70dvw;
-    height: 30dvw;
-    padding: 10px;
+    height: 50dvh;
     border-radius: 30px;
     border: 1px solid #333;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.705);
@@ -35,11 +35,10 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 4rem;
-    width: 33dvw;
+    font-size: 4dvw;
+    width: 15dvw;
     height: 33dvh;
     border-radius: 30px;
-    margin: 20px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.705);
     background-color: #333;
     color: white;
@@ -49,9 +48,9 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10px;
-    height: 10px;
+    width: 1.3dvw;
+    height: 1.3dvw;
     border-radius: 50%;
-    margin: 12px;
+    margin: 2dvw 0;
     background-color: white;
 }
